--- a/docker-flask-postgres/base-image/Dockerfile
+++ b/docker-flask-postgres/base-image/Dockerfile
@@ -12,4 +12,6 @@ RUN apk add --no-cache postgresql-dev gcc python3 python3-dev musl-dev && \
     pip3 install --upgrade pip setuptools && \
     rm -r /root/.cache && \
     pip3 install -U flask-cors && \
+    pip2 install --upgrade pip && \
+    pip2 install requests-futures && \
     pip3 install -r requirements.txt
