--- a/docker-flask-postgres/Dockerfile
+++ b/docker-flask-postgres/Dockerfile
@@ -4,7 +4,9 @@ FROM fanoftal2/flask-crud-base:1
 
 ADD ./app /home/app/
 WORKDIR /home/app/
-RUN pip install -U flask-cors
+RUN pip install -U flask-cors && \
+    pip install --upgrade pip && \
+    pip install requests-futures
 EXPOSE 5000
 
 ENTRYPOINT ["python3", "app.py"]
