--- a/Ng406/package.json
+++ b/Ng406/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "chart.js": "^2.7.1",
+    "codemirror": "^5.32.0",
     "core-js": "^2.4.1",
     "ng2-charts": "^1.6.0",
+    "ng2-codemirror": "^1.1.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
