--- a/docker-flask-postgres/base-image/Dockerfile
+++ b/docker-flask-postgres/base-image/Dockerfile
@@ -6,7 +6,7 @@ ADD requirements.txt /home/app/
 WORKDIR /home/app/
 
 
-RUN apk add --update --no-cache postgresql gcc python3 python3-dev musl-dev && \
+RUN apk add --update --no-cache postgresql>10.1-r1 gcc python3 python3-dev musl-dev && \
     python3 -m ensurepip && \
     rm -r /usr/lib/python*/ensurepip && \
     pip3 install --upgrade pip setuptools && \
