--- a/docker-flask-postgres/Dockerfile
+++ b/docker-flask-postgres/Dockerfile
@@ -1,12 +1,28 @@
 # Basic flask container
 
-FROM fanoftal2/flask-crud-base:1
+FROM alpine:3.7
+
 
 ADD ./app /home/app/
 WORKDIR /home/app/
-RUN pip install -U flask-cors && \
-    pip install --upgrade pip && \
-    pip install requests-futures
+RUN apk add --no-cache postgresql-dev gcc python3 python3-dev musl-dev py-pip && \
+    python3 -m ensurepip && \
+    rm -r /usr/lib/python*/ensurepip && \    
+    pip3 install --upgrade pip setuptools && \
+    rm -r /root/.cache && \
+    pip install -U flask-cors && \
+    pip2 install --upgrade pip && \
+    pip3 install requests && \
+    pip2 install requests && \
+    pip2 install requests-futures && \
+    pip3 install flask && \
+    pip3 install flask-sqlalchemy && \
+    pip3 install psycopg2 && \
+    pip3 install flask-cors 
+    
+    
+ 
+    
 EXPOSE 5000
 
 ENTRYPOINT ["python3", "app.py"]
