--- a/docker-flask-postgres/Dockerfile
+++ b/docker-flask-postgres/Dockerfile
@@ -5,16 +5,19 @@ FROM alpine:3.7
 
 ADD ./app /home/app/
 WORKDIR /home/app/
-RUN apk add --no-cache postgresql-dev gcc python3 python3-dev musl-dev py-pip && \
+RUN apk add --no-cache postgresql-dev gcc python3 python3-dev musl-dev py-pip nginx uwsgi uwsgi-python py2-pip && \
     python3 -m ensurepip && \
-    rm -r /usr/lib/python*/ensurepip && \    
+    rm -r /usr/lib/python*/ensurepip && \
     pip3 install --upgrade pip setuptools && \
     rm -r /root/.cache && \
     pip install -U flask-cors && \
-    pip2 install --upgrade pip && \
-    pip3 install requests && \
+    pip install --upgrade pip && \
     pip2 install requests && \
+    pip3 install requests && \
+    pip install requests-futures && \
     pip2 install requests-futures && \
+    pip3 install requests-futures && \
+    pip2 install --upgrade pip && \
     pip3 install flask && \
     pip3 install flask-sqlalchemy && \
     pip3 install psycopg2 && \
