--- a/NodeExpressMongoDBDockerApp/config/config.development.json
+++ b/NodeExpressMongoDBDockerApp/config/config.development.json
@@ -1,6 +1,6 @@
 {
     "databaseConfig": {
         "host": "mongodb",
-        "database": "funWithDocker"
+        "database": "mongoOne"
     }
 }
