--- a/NodeExpressMongoDBDockerApp/package.json
+++ b/NodeExpressMongoDBDockerApp/package.json
@@ -14,6 +14,7 @@
     "morgan": "^1.8.2",
     "serve-favicon": "^2.4.3",
     "mongoose": "^4.11.5",
-    "readline": "1.3.0"
+    "readline": "1.3.0",
+    "mongodb": "^2.2.33"
   }
 }
