--- a/NodeExpressMongoDBDockerApp/package.json
+++ b/NodeExpressMongoDBDockerApp/package.json
@@ -11,10 +11,14 @@
     "debug": "^2.6.8",
     "express": "^4.15.3",
     "express-handlebars": "3.0.0",
-    "morgan": "^1.8.2",
-    "serve-favicon": "^2.4.3",
+    "mongodb": "^2.2.33",
     "mongoose": "^4.11.5",
+    "morgan": "^1.8.2",
+    "nodemon": "^1.12.5",
     "readline": "1.3.0",
-    "mongodb": "^2.2.33"
+    "serve-favicon": "^2.4.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.5"
   }
 }
