--- a/NodeExpressMongoDBDockerApp/Dockerfile
+++ b/NodeExpressMongoDBDockerApp/Dockerfile
@@ -22,11 +22,19 @@ MAINTAINER Dan Wahlin
 ENV NODE_ENV=development 
 ENV PORT=3000
 
-COPY      . /var/www
-WORKDIR   /var/www
 
-RUN       npm install
+
+RUN mkdir -p /opt/app
+WORKDIR /opt/app
+
+COPY . /opt/app
+
+RUN npm install
 
 EXPOSE $PORT
 
-ENTRYPOINT ["npm", "start"]
+CMD ["npm", "start"]
+
+
+
+
