--- a/NodeExpressMongoDBDockerApp/package.json
+++ b/NodeExpressMongoDBDockerApp/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon -L server.js"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
@@ -13,8 +13,9 @@
     "express-handlebars": "3.0.0",
     "morgan": "^1.8.2",
     "serve-favicon": "^2.4.3",
-    "mongoose": "^4.11.5",
+    "mongoose": "^4.13.6",
     "readline": "1.3.0",
-    "mongodb": "^2.2.33"
+    "mongodb": "^2.2.33",
+    "nodemon": "^1.9.2"
   }
 }
