--- a/NodeExpressMongoDBDockerApp/package.json
+++ b/NodeExpressMongoDBDockerApp/package.json
@@ -11,6 +11,7 @@
     "debug": "^2.6.8",
     "express": "^4.15.3",
     "express-handlebars": "3.0.0",
+    "jsonwebtoken": "^8.1.0",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.6",
     "morgan": "^1.8.2",
