--- a/NodeExpressMongoDBDockerApp/package.json
+++ b/NodeExpressMongoDBDockerApp/package.json
@@ -15,7 +15,8 @@
     "mongoose": "^4.13.6",
     "morgan": "^1.8.2",
     "readline": "1.3.0",
-    "serve-favicon": "^2.4.3"
+    "serve-favicon": "^2.4.3",
+    "jsonwebtoken": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.5"
